@startuml

hide methods
left to right direction

class Platform {
  -String designation
}

class Organization {
  -String designation
}

class Manager {
  -String name
  -String email
}

class User {
  -String name
  -String email
  -String password
}

Platform "1" -- "*" Organization : has registered >
Platform "1" -- "*" User : has registered >

Organization "1" -- "1" Manager: has >

Manager "0..1" -- "1" User : act as >
@enduml
